Fixed Bulk Edit header chkbox, now follow alignment.

--- a/KTL.css
+++ b/KTL.css
@@ -6,7 +6,7 @@
 	* @license GPLv3
     */
 
-/* KTL CSS version: 0.2.17 */
+/* KTL CSS version: 0.2.18 */
 
 /************ General Settings **************/
 :root {
@@ -99,9 +99,8 @@
 }
 
 .bulkEditHeaderCbox {
-	top: 7px;
-	right: 7px;
-	position: absolute;
+	margin-left: 10px!important;
+	margin-top: 2px!important;
 }
 
 .bulkEditTh {
